--- a/Home/index.html
+++ b/Home/index.html
@@ -18,7 +18,7 @@
                 class="background-image" src="../images/background-home.jpg" />
             <div class="navbar">
                 <div class="logo">
-                    BTM
+                    <img alt="BTM  logo" src="../images/BTM_logo.png" />
                 </div>
                 <div class="menu-icon">
                     <i class="fas fa-bars">
