--- a/Subcontractor/subordinator.html
+++ b/Subcontractor/subordinator.html
@@ -11,7 +11,7 @@
     <div class="nav-wrapper">
         <div class="navbar">
             <div class="logo">
-                <img alt="BTM  logo" src="../images/BTM-logo.jpeg" />
+                <img alt="BTM  logo" src="../images/BTM_logo.png" />
             </div>
             <div class="menu-icon">
                 <i class="fas fa-bars">
