--- a/Home/index.html
+++ b/Home/index.html
@@ -271,7 +271,9 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="logo">BTM</div>
+            <div class="logo">
+                <img alt="BTM  logo" src="../images/BTM_logo.png" />
+            </div>
             <div class="nav-links">
                 <a href="#">Our Company</a>
                 <a href="#">Our Services</a>
