--- a/Company-page/Company.html
+++ b/Company-page/Company.html
@@ -193,7 +193,9 @@
 
     <footer class="footer">
         <div class="containe">
-            <div class="logo">BTM</div>
+            <div class="logo">
+                <img alt="BTM  logo" src="../images/BTM_logo.png" />
+            </div>
             <div class="nav-links">
                 <a href="#">Our Company</a>
                 <a href="#">Our Services</a>
