--- a/Career/Carrer.html
+++ b/Career/Carrer.html
@@ -36,6 +36,11 @@
                 <a class="menu-item" href="../Career/Carrer.html">
                     Careers
                 </a>
+                <div class="ham-button">
+                    <span class="hamline"></span>
+                    <span class="hamline"></span>
+                    <span class="hamline"></span>
+                </div>
                 <a class="menu-item" href="../Contact-Us/Contact.html">
                     Contact Us
                 </a>
@@ -45,7 +50,9 @@
             </div>
         </div>
     </div>
-
+    <div id="overlay">
+        <iframe src="../overlay.html" frameborder="0"></iframe>
+      </div>
     <div class="hero">
         <img alt="Group of people wearing Turner t-shirts standing together outdoors" src="../images/Career-bg.jpg" />
         <div class="hero-text">
@@ -148,43 +155,77 @@
     </div>
 
 
-    <footer class="footer">
-        <div class="containe">
-            <div class="logo">
-                <img alt="BTM  logo" src="../images/BTM_logo.png" />
-            </div>
-            <div class="nav-links">
-                <a href="#">Our Company</a>
-                <a href="#">Our Services</a>
-                <a href="#">Our Projects</a>
-                <a href="#">Insights</a>
-                <a href="#">Careers</a>
-                <a href="#">Contact</a>
-            </div>
-            <div class="social-ic">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
+    <div class="footer">
+        <div class="left">
+         <img alt="Turner logo" height="50" src="../images/BTM_logo.png" width="100"/>
+         <p>
+          © 2025 Turner Construction Company
+          <br/>
+          All rights reserved
+         </p>
         </div>
-        <div class="bottom-text">
-            <div id="copyright">
-                © 2025 Turner Construction Company<br>
-                All rights reserved
-            </div>
-            <div id="foot-text">
-                Turner is an Equal Opportunity Employer – race, color, religion, sex, sexual orientation, gender
-                identity, national origin, disability, status as a protected veteran, or other characteristics protected
-                by applicable law.<br>
-                <a href="#">Human Rights Policy</a>
-            </div>
-            <div id="foot-alerts">
-                <a href="#">Fraud Alert</a> | <a href="#">Privacy Policy</a> | <a href="#">Cookie Settings</a>
-            </div>
+        <div class="center">
+         <a href="#">
+          Our Company
+         </a>
+         <a href="#">
+          Our Services
+         </a>
+         <a href="#">
+          Our Projects
+         </a>
+         <a href="#">
+          Insights
+         </a>
+         <a href="#">
+          Careers
+         </a>
+         <a href="#">
+          Contact
+         </a>
+         <p style="margin-top: 20px;">
+          Turner is an Equal Opportunity Employer – race, color, religion, sex, sexual orientation, gender identity, national origin, disability, status as a protected veteran, or other characteristics protected by applicable law.
+          
+         </p>
         </div>
-    </footer>
+        <div class="right">
+         <div class="social-icons">
+          <a href="#">
+           <i class="fab fa-facebook-f">
+           </i>
+          </a>
+          <a href="#">
+           <i class="fab fa-instagram">
+           </i>
+          </a>
+          <a href="#">
+           <i class="fab fa-linkedin-in">
+           </i>
+          </a>
+          <a href="#">
+           <i class="fas fa-times">
+           </i>
+          </a>
+          <a href="#">
+           <i class="fab fa-youtube">
+           </i>
+          </a>
+         </div>
+         <p id="subalts">
+          <a href="#">
+           Fraud Alert
+          </a>
+          |
+          <a href="#">
+           Privacy Policy
+          </a>
+          |
+          <a href="#">
+           Cookie Settings
+          </a>
+         </p>
+        </div>
+       </div>
 <script src="../script.js"></script>
 </body>
 
